--- a/week1/index.html
+++ b/week1/index.html
@@ -19,7 +19,7 @@
    <div class = "movies">
         <h2>Favourite Movies</h2>
         <ol>
-            <li>Sherhsaah</li>
+            <li>Shershaah</li>
             <li>Pushpa</li>
             <li>3 idiots</li>
         </ol>
@@ -36,7 +36,7 @@
    </div>
 
    <hr>
-   
+
    <div class = "bottom">
     <p class="copy-right">© Prafful Gupta.</p>
    </div>
