--- a/week1/index.html
+++ b/week1/index.html
@@ -22,7 +22,7 @@
     </header>
     <section>
       <div class="container">
-        <h1>Welcome to my website!!</h1>
+        <h1>Welcome to my Website</h1>
         <ul>
           <h2 class="movies">List Of Favourite Movies</h2>
           <li>Angels & Demons</li>
