--- a/week1/index.html
+++ b/week1/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="pic.jpg" alt="Not Found" width="80px">
-        <h5>Vedant Tarale</h5>
+        <h4>Vedant Tarale</h4>
     </header>
     <main>
         <table>
@@ -21,6 +21,7 @@
             <td>18 Years</td>
             <td>Nashik</td>
         </tr>
+    <hr>
         <section>
             <span>My Favourite movies</span>
             <ul>
@@ -29,7 +30,12 @@
                 <li>Thor Ragnarok</li>
             </ul>
         </section>
+    <hr>
         </table>
     </main>
+    <hr>
+    <footer>
+        <p>Copyright &copy; Vedant Tarale</p>
+    </footer>
 </body>
 </html>
