--- a/week1/index.html
+++ b/week1/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Profile Page</title>
 </head>
 <body>
-    <header>
-        <img src="pic.jpg" alt="Not Found" width="80px">
+    <header class="header">
+    <div>
+        <img src="pic.jpg" alt="Not Found" width="123px">
         <h4>Vedant Tarale</h4>
+    </div>
     </header>
+    <hr>
     <main>
-        <table>
+        <div class="tableholder">
+        <table class="table">
         <tr>
             <th>Age</th>
             <th>City</th>
@@ -21,21 +26,22 @@
             <td>18 Years</td>
             <td>Nashik</td>
         </tr>
+    </table>
+</div>
     <hr>
         <section>
-            <span>My Favourite movies</span>
-            <ul>
+            <ul class="list">
+                <li class="tabletitle">My Favourite movies</li>
                 <li>Avengers Endgame</li>
                 <li>SpiderMan No Way Home</li>
                 <li>Thor Ragnarok</li>
             </ul>
         </section>
     <hr>
-        </table>
     </main>
-    <hr>
     <footer>
-        <p>Copyright &copy; Vedant Tarale</p>
+        <p class="footer">Copyright &copy; Vedant Tarale</p>
     </footer>
+    <hr>
 </body>
 </html>
