--- a/week1/ruby-1.html
+++ b/week1/ruby-1.html
@@ -53,7 +53,7 @@
         <!-- Header -->
         <header>
             <figure>
-            <img src="C:\Users\admin\Documents\photo.jpg" alt="My Pic">
+            <img src="photo.jpg" alt="My Pic">
             <figcaption> Rakshith Jain</figcaption>
         </figure>
         </header>
